--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -6,6 +6,7 @@
     content='<%= ENV['GOOGLE_CLIENT_ID'] %>'
   />
   <script src="https://apis.google.com/js/platform.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 
 <body>
